name:                x509-chain-validation-test
version:             0.1.0.0
synopsis:            test x509 certificate chain validation
description:         test x509 certificate chain validation
homepage:            https://github.com/wangbj/x509-chain-validation-test
license:             BSD3
license-file:        LICENSE
author:              Baojun Wang
maintainer:          wangbj@gmail.com
copyright:           2017 Baojun Wang
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CA
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10 && < 1
                     , mtl >= 2.2 && < 3
                     , pem >= 0.2 && < 1
                     , memory >= 0.13 && < 1
                     , x509 >= 1.6.5 && < 2
                     , x509-validation >= 1.6.2 && < 2
                     , x509-store >= 1.6.2 && < 2
                     , QuickCheck >= 2.9 && < 3
                     , process >= 1.4 && < 2
                     , directory >= 1.3 && < 2
                     , unix >= 2.7 && < 3
  default-language:    Haskell2010

executable chain-validation
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring >= 0.10 && < 1
                     , mtl >= 2.2 && < 3
                     , pem >= 0.2 && < 1
                     , memory >= 0.13 && < 1
                     , x509 >= 1.6.5 && < 2
                     , x509-validation >= 1.6.2 && < 2
                     , x509-store >= 1.6.2 && < 2
                     , QuickCheck >= 2.9 && < 3
                     , process >= 1.4 && < 2
                     , unix >= 2.7 && < 3
                     , directory >= 1.3 && < 2
                     , x509-chain-validation-test
  default-language:    Haskell2010

test-suite chain-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring >= 0.10 && < 1
                     , mtl >= 2.2 && < 3
                     , pem >= 0.2 && < 1
                     , memory >= 0.13 && < 1
                     , x509 >= 1.6.5 && < 2
                     , x509-validation >= 1.6.2 && < 2
                     , x509-store >= 1.6.2 && < 2
                     , QuickCheck >= 2.9 && < 3
                     , process >= 1.4 && < 2
                     , unix >= 2.7 && < 3
                     , directory >= 1.3 && < 2
                     , x509-chain-validation-test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wangbj/x509-chain-validation-test
